[gd_scene load_steps=27 format=3 uid="uid://eico640bnqcf"]

[ext_resource type="Material" uid="uid://r5inodyqbivo" path="res://Materials/BeachSand.tres" id="1_0j77u"]
[ext_resource type="Script" path="res://Scripts/LevelScripts/intro_scene.gd" id="1_s53rt"]
[ext_resource type="PackedScene" uid="uid://bc2xdohemy1hw" path="res://Environment/Rocks/rock_boulder_2.tscn" id="2_b0f4w"]
[ext_resource type="PackedScene" uid="uid://bg5txh1316fg1" path="res://Environment/Rocks/rock_boulder.tscn" id="3_aulws"]
[ext_resource type="PackedScene" uid="uid://508jx6t38xmk" path="res://Environment/Rocks/rock_boulder_3.tscn" id="4_x35wx"]
[ext_resource type="PackedScene" uid="uid://du8rl5qo87gh5" path="res://Environment/Rocks/rock_pillar.tscn" id="5_yd54j"]
[ext_resource type="PackedScene" uid="uid://dsn5l2kp7qlq1" path="res://Scenes/crazoonga.tscn" id="6_1rgmm"]
[ext_resource type="PackedScene" uid="uid://xuuyr4xk2grp" path="res://Scenes/PickupShell.tscn" id="7_3guvj"]
[ext_resource type="PackedScene" uid="uid://0rx0lsvlnt8o" path="res://Scenes/fish.tscn" id="8_27l3i"]
[ext_resource type="Script" path="res://Scripts/Pickup.gd" id="8_hm2j7"]
[ext_resource type="PackedScene" uid="uid://dnqhbphlgpnlx" path="res://Models/Shell_A.glb" id="9_e6n80"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_44up5"]
sky_top_color = Color(0.407843, 0.556863, 1, 1)
sky_horizon_color = Color(0.668628, 0.696078, 0.795098, 1)
ground_bottom_color = Color(0.266667, 0.227451, 0.180392, 1)
ground_horizon_color = Color(0.668628, 0.696078, 0.795098, 1)

[sub_resource type="Sky" id="Sky_oart6"]
sky_material = SubResource("ProceduralSkyMaterial_44up5")

[sub_resource type="Environment" id="Environment_yk1mq"]
background_mode = 2
sky = SubResource("Sky_oart6")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_vypwb"]
material = ExtResource("1_0j77u")

[sub_resource type="NavigationMesh" id="NavigationMesh_8cctq"]
vertices = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1)
polygons = [PackedInt32Array(0, 1, 2), PackedInt32Array(1, 3, 2)]

[sub_resource type="BoxShape3D" id="BoxShape3D_4nshh"]
size = Vector3(129.762, 1, 285.005)

[sub_resource type="BoxShape3D" id="BoxShape3D_0ktq0"]
size = Vector3(38.5456, 8.08971, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_3ddsh"]
size = Vector3(0.239795, 0.147228, 0.253969)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c5614"]
albedo_color = Color(0.552941, 0.231373, 0.117647, 1)

[sub_resource type="Animation" id="Animation_d0aur"]
resource_name = "ShellSpin"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0.261799), Vector3(0, -3.14159, 0.261799), Vector3(0, -6.28319, 0.261799)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skqbf"]
_data = {
"ShellSpin": SubResource("Animation_d0aur")
}

[sub_resource type="Animation" id="Animation_p58sq"]
resource_name = "Cam1To2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cameras/Camera1:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cameras/Camera2:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_f4jj6"]
resource_name = "Cam2To1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cameras/Camera2:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cameras/Camera1:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kaqq6"]
resource_name = "Cam2To3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cameras/Camera2:current")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cameras/Camera3:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u70oc"]
_data = {
"Cam1To2": SubResource("Animation_p58sq"),
"Cam2To1": SubResource("Animation_f4jj6"),
"Cam2To3": SubResource("Animation_kaqq6")
}

[node name="Intro Scene" type="Node3D"]
script = ExtResource("1_s53rt")

[node name="Cameras" type="Node3D" parent="."]

[node name="Camera1" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.999768, 0.00344458, 0.0212584, -0.0055738, 0.994878, 0.100928, -0.0208019, -0.101023, 0.994667, 11.0421, 5.66433, 55.5767)
current = true

[node name="Camera2" type="Camera3D" parent="Cameras"]
transform = Transform3D(-0.999768, 0.00997738, -0.0190851, 0.00557381, 0.975889, 0.218196, 0.020802, 0.218039, -0.975718, 5.8553, 6.9127, -13.4035)

[node name="Camera3" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.999768, -0.00154172, 0.0214806, -0.00557381, 0.944925, 0.327241, -0.0208021, -0.327284, 0.944697, 6.40466, 16.2245, 10.5043)

[node name="Camera4" type="Camera3D" parent="Cameras"]
transform = Transform3D(0.271958, 0.501316, -0.821414, 0.0122097, 0.85172, 0.523854, 0.962232, -0.152496, 0.225511, -24.8723, 19.0423, -21.9201)

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.752535, -0.21957, -0.62087, -0.398127, 0.902673, 0.163326, 0.524582, 0.370093, -0.766711, -30.2135, 52.2636, -57.2962)
light_color = Color(0.992157, 1, 0.870588, 1)
light_energy = 0.709
shadow_enabled = true
shadow_normal_bias = 0.865

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_yk1mq")

[node name="Beach Ground" type="StaticBody3D" parent="."]

[node name="Beach" type="MeshInstance3D" parent="Beach Ground"]
transform = Transform3D(59.6041, 0, 0, 0, 59.6041, 0, 0, 0, 130.214, 0, 0, 1.22964)
material_override = ExtResource("1_0j77u")
mesh = SubResource("PlaneMesh_vypwb")
skeleton = NodePath("../..")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Beach Ground/Beach"]
visible = false
navigation_mesh = SubResource("NavigationMesh_8cctq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Beach Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_4nshh")

[node name="RockWalls" type="Node3D" parent="."]

[node name="rock_boulder2" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(1, 0, 0, 0, 0.722441, 0, 0, 0, 1, -5.65968, 0, 15.1567)

[node name="rock_boulder9" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.258819, 0, 0.965926, 0, 0.722441, 0, -0.965926, 0, 0.258819, -2.3741, 0, 53.9641)

[node name="rock_boulder12" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.5, 0, 0.866025, 0, 0.722441, 0, -0.866025, 0, 0.5, -14.9617, 0, -8.21307)

[node name="rock_boulder26" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(-0.403705, 0, 1.38798, 0, 0.722441, 0, -0.914889, 0, -0.612462, -2.25408, 0, -74.5227)

[node name="rock_boulder23" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.965926, 0, 0.258819, 0, 0.722441, 0, -0.258819, 0, 0.965926, -22.4057, 0, -35.9944)

[node name="rock_boulder13" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 0.722441, 0, 0.258819, 0, 0.965926, 25.0214, 1.90735e-06, -8.89795)

[node name="rock_boulder22" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.5, 0, 0.866025, 0, 0.722441, 0, -0.866025, 0, 0.5, 29.9077, 1.90735e-06, -63.4489)

[node name="rock_boulder21" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 0.722441, 0, 0.258819, 0, 0.965926, 38.922, 1.90735e-06, -42.355)

[node name="rock_boulder10" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.726683, 0, -0.686973, 0, 0.722441, 0, 0.686973, 0, 0.726683, 31.701, 0, 50.8493)

[node name="rock_boulder11" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.0280786, 0, -0.999606, 0, 0.722441, 0, 0.999606, 0, 0.0280786, 15.7643, 0, 57.6604)

[node name="rock_boulder8" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(-4.23751e-08, 0, 0.4, 0, 1.6449, 0, -0.96943, 0, -1.74846e-08, -8.30052, -0.571421, 46.3726)

[node name="rock_boulder24" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(-4.23751e-08, 0, 0.4, 0, 1.6449, 0, -0.96943, 0, -1.74846e-08, -19.7848, -0.571421, -64.8066)

[node name="rock_boulder19" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(-4.23751e-08, 0, 0.4, 0, 1.6449, 0, -0.96943, 0, -1.74846e-08, 31.9317, -0.571421, -30.3998)

[node name="rock_boulder25" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(-4.23751e-08, 0, 0.4, 0, 1.6449, 0, -0.96943, 0, -1.74846e-08, 13.8685, -0.571421, -75.9688)

[node name="rock_boulder20" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(0.936398, 0, -0.103528, 0, 1.6449, 0, 0.250907, 0, 0.38637, 36.8387, -0.571417, -53.803)

[node name="rock_boulder7" parent="RockWalls" instance=ExtResource("2_b0f4w")]
transform = Transform3D(-0.578499, 0, -0.552575, 0, 0.8, 0, 0.552575, 0, -0.578499, 32.8603, -9.53674e-07, 42.4989)

[node name="rock_boulder" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.67697, 0, 29.6155)

[node name="rock_boulder14" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.4174, -0.764797, -18.8031)

[node name="rock_boulder15" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.4138, -2.48579, -25.8995)

[node name="rock_boulder17" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(-0.999991, 0, -0.00415396, 0, 1, 0, 0.00415396, 0, -0.999991, -26.3224, -0.625519, -51.2342)

[node name="rock_boulder18" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -24.2978, -2.34651, -58.3307)

[node name="rock_boulder4" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 23.3009, 0, 25.1336)

[node name="rock_boulder5" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(0, 0, 1.33946, 0, 1.33946, 0, -1.33946, 0, 0, 29.908, -1.02712, 29.2137)

[node name="rock_boulder16" parent="RockWalls" instance=ExtResource("3_aulws")]
transform = Transform3D(0, 0, 1.33946, 0, 1.33946, 0, -1.33946, 0, 0, 31.2629, -1.02712, -21.4263)

[node name="rock_boulder3" parent="RockWalls" instance=ExtResource("4_x35wx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.9787, 0, 12.2776)

[node name="rock_boulder6" parent="RockWalls" instance=ExtResource("4_x35wx")]
transform = Transform3D(1, 0, 0, 0, 0.763015, 0, 0, 0, 1, -7.12661, -0.055059, 35.4419)

[node name="rock_pillar" parent="RockWalls" instance=ExtResource("5_yd54j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.7255, 0, 0)

[node name="rock_pillar3" parent="RockWalls" instance=ExtResource("5_yd54j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.7453, 0, -76.1709)

[node name="rock_pillar2" parent="RockWalls" instance=ExtResource("5_yd54j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.80351, 0, -0.176655)

[node name="StaticBody3D" type="StaticBody3D" parent="RockWalls"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RockWalls/StaticBody3D"]
transform = Transform3D(0.999925, 0, 0.0122345, 0, 1, 0, -0.0122345, 0, 0.999925, 14.9064, -0.0927353, 51.5005)
shape = SubResource("BoxShape3D_0ktq0")

[node name="Crazoonga" parent="." instance=ExtResource("6_1rgmm")]
transform = Transform3D(-0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, -0.258819, 12.3161, 0.469355, 45.072)

[node name="PickupShells" type="Node3D" parent="."]

[node name="FirstShell" type="Area3D" parent="PickupShells" groups=["firstShell"]]
transform = Transform3D(6.05704, 0, 0, 0, 6.05704, 0, 0, 0, 6.05704, 7.19079, -0.0474734, -1.42547)
collision_layer = 16
collision_mask = 2
script = ExtResource("8_hm2j7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupShells/FirstShell"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.135214, 0)
shape = SubResource("BoxShape3D_3ddsh")

[node name="Shell_A" parent="PickupShells/FirstShell" instance=ExtResource("9_e6n80")]
transform = Transform3D(0.0965926, -0.0258819, 0, 0.0258819, 0.0965926, 0, 0, 0, 0.1, 0, -0.0396624, 0)

[node name="Shell A" parent="PickupShells/FirstShell/Shell_A" index="0"]
material_override = SubResource("StandardMaterial3D_c5614")

[node name="ShellAnim" type="AnimationPlayer" parent="PickupShells/FirstShell/Shell_A"]
autoplay = "ShellSpin"
libraries = {
"": SubResource("AnimationLibrary_skqbf")
}

[node name="SecondShell" parent="PickupShells" instance=ExtResource("7_3guvj")]
transform = Transform3D(4.65926, 0, 0, 0, 4.65926, 0, 0, 0, 4.65926, -12.5192, -4.76837e-07, -25.1456)

[node name="ThirdShell" parent="PickupShells" instance=ExtResource("7_3guvj")]
transform = Transform3D(4.65926, 0, 0, 0, 4.65926, 0, 0, 0, 4.65926, 26.4463, -4.76837e-07, -43.3913)

[node name="Enemies" type="Node3D" parent="."]

[node name="Fish" parent="Enemies" instance=ExtResource("8_27l3i")]
transform = Transform3D(-0.516356, 0, 1.92707, 0, 1.99505, 0, -1.92707, 0, -0.516356, -0.240071, 0, -61.2662)
health = 5

[node name="CameraTransitions" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u70oc")
}

[connection signal="area_entered" from="PickupShells/FirstShell" to="." method="_on_first_shell_area_entered"]

[editable path="PickupShells/FirstShell/Shell_A"]
